Se agrega Tarifario